--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -18,19 +18,15 @@
   </ion-header>
   <ion-card>
     <ion-card-content>
-      <p><ion-icon name="bookmark-outline"></ion-icon><b>Bem-vindo à Pizzaria Zanini, onde a tradição italiana encontra
-          o sabor contemporâneo. Nossas pizzas são
-          cuidadosamente preparadas com ingredientes frescos e de alta qualidade, garantindo uma experiência
-          gastronômica
-          única. Delicie-se com a autenticidade de sabores clássicos e descubra novas combinações em cada mordida. Venha
-          nos visitar e saborear a verdadeira paixão pela pizza.</b></p>
+      <p><ion-icon name="bookmark-outline"></ion-icon>
+        Descubra a Pizzaria Zanini: tradição italiana e sabor contemporâneo em cada pizza. Ingredientes frescos,
+        qualidade excepcional. Venha saborear a paixão pela pizza.</p>
     </ion-card-content>
   </ion-card>
   <ion-card>
-    <ion-icon name="accessibility-outline"></ion-icon>
-    <p>O grande Chefe Luigi Zanini em seu primeiro restaurante!</p>
-    <ion-img
-      src="https://cdn.discordapp.com/attachments/1121561871758131280/1121597018498928700/pizzas-com-farinha-italiana-especialidade-do-personal-chef-1602688657990_v2_1067x1067.png"></ion-img>
+    <p><ion-icon name="accessibility-outline"></ion-icon><b>Chefe Linguini Zanini.</b></p>
+
+    <ion-img src="https://cdn.discordapp.com/attachments/1121561871758131280/1122702431067836496/image.png"></ion-img>
   </ion-card>
   <ion-card>
     <ion-card-header>
